noinst_LIBRARIES = libmoolticute.a

libmoolticute_a_SOURCES = src/callbacks/moolticute_cb_application_id.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_card_db_metadata.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_connected.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_failed_memorymgmt.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_memorymgmt_changed.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_memorymgmt_data.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_not_found.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_param_changed.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_progress.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_status_changed.c
libmoolticute_a_SOURCES += src/callbacks/moolticute_cb_version_changed.c

libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_get_application_id.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_query_random_number.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_request_device_uid.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_request_password.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_service_exist.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_start_memory_management.c
libmoolticute_a_SOURCES += src/cmds/moolticute_cmd_stop_memory_management.c

libmoolticute_a_SOURCES += src/moolticute_array.c
libmoolticute_a_SOURCES += src/moolticute_callback.c
libmoolticute_a_SOURCES += src/moolticute_connect.c
libmoolticute_a_SOURCES += src/moolticute_init.c
libmoolticute_a_SOURCES += src/moolticute_register_cb.c
libmoolticute_a_SOURCES += src/mooltipass_memory.c

include_HEADERS  = src/moolticute.h
nodist_include_HEADERS  = src/moolticute_array.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_application_id.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_card_db_metadata.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_connected.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_failed_memorymgmt.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_memorymgmt_changed.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_memorymgmt_data.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_not_found.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_param_changed.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_progress.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_status_changed.h
nodist_include_HEADERS  += src/callbacks/moolticute_cb_version_changed.h
